--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Elias Ekman
+title: Examination 1
 email: ee222yi@lnu.student.se
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is my awesome site about examination one in 1dv022. I hope this site is going to work well and you enjoi your stay here.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://localhost:8080/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: eliasalmighty
 github_username:  Ekis2k
+author: Elias Ekman
 
 # Build settings
 markdown: kramdown
